# sdwearestimator

./: .gitignore  Cargo.toml  README.md  sdwear.systemd.service
poindexter/: duw.json  poindexterSolution.xml  poindexterUnit.xml  readme.txt
poindexter/ict/: ROOT.txt
src/: main.rs
