[package]
name = "sdestimator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["fs"] }

[profile.release]
opt-level = 'z'       # optimize for binary size over speed
lto = true            # link-time optimization - removes dead code across crates at link time
panic = 'abort'       # no unwinding machinery - removes backtrace/gimli code entirely
codegen-units = 1     # single codegen unit allows maximum cross-module optimization
strip = true          # automatically strip symbols from the final binary
